--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,5 @@
 {
+    "minimum-stability": "dev",
     "repositories": [
         {
             "type": "pear",
@@ -7,6 +8,11 @@
         }
     ],
     "require": {
-        "drush/drush": "5.6"
+        "drush/drush": "5.6",
+        "behat/behat": "2.4.3",
+        "behat/mink": "1.4.0",
+        "behat/mink-extension": "1.0.0",
+        "behat/mink-goutte-driver": "1.0.3",
+        "behat/mink-zombie-driver": "1.0.0"
     }
 }
