--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,11 @@ language: php
 php:
   - 5.3
 
-install
+branches:
+  only:
+    - master
+
+install:
   - sudo apt-get --quiet=2 install php5-cgi php5-curl php5-gd php5-sqlite libgd2-xpm npm > /dev/null
   - npm --quiet install zombie@1.3.1 > /dev/null
   - composer --quiet update
