--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ branches:
 
 install:
   - sudo apt-get --quiet=2 install php5-cgi php5-curl php5-gd php5-sqlite libgd2-xpm npm > /dev/null
-  - npm --quiet install zombie@1.3.1 > /dev/null
+  - npm --quiet install > /dev/null
   - composer --quiet update
   - export PATH=$PATH:$PWD/vendor/bin
   - export NODE_PATH=$NODE_PATH:$PWD/node_modules
