Make travis output quieter.

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ branches:
 
 install:
   - sudo apt-get --quiet=2 install php5-cgi php5-curl php5-gd php5-sqlite libgd2-xpm npm > /dev/null
-  - npm --quiet install > /dev/null
+  - npm install > /dev/null 2>&1
   - composer --quiet update
   - export PATH=$PATH:$PWD/vendor/bin
   - export NODE_PATH=$NODE_PATH:$PWD/node_modules
@@ -16,7 +16,7 @@ install:
 before_script:
   - drush -q make drush.make drupal
   - drush -q -y -r $PWD/drupal site-install --db-url=sqlite://db.sqlite --account-pass=travis
-  - drush -r $PWD/drupal runserver :8888 & > /dev/null
+  - drush -r $PWD/drupal runserver :8888 > /dev/null &
   - sleep 4s
 
 script: behat -c behat.travis.yml
