--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ install:
 before_script:
   - drush -q make drush.make drupal
   - drush -q -y -r $PWD/drupal site-install --db-url=sqlite://db.sqlite --account-pass=travis
-  - drush -r $PWD/drupal runserver :8888 > /dev/null &
+  - drush -r $PWD/drupal runserver :8888 > /dev/null 2>&1 &
   - sleep 4s
 
 script: behat -c behat.travis.yml
