--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,4 @@ before_script:
   - drush -r $PWD/drupal runserver :8888 > /dev/null 2>&1 &
   - sleep 4s
 
-script: behat -c behat.travis.yml
+script: behat -fprogress -c behat.travis.yml
